manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: my-k82265683
spec:
    ports:
    - port: 8080 
    selector:
        app: "k82265683"
