manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "k82265683-ingress"
spec:
  ingressClassName: ingress-internal
  rules:
  - host: "k82265684.ce-aa.kubepia.net"
    http:
      paths:
      - path: /
        backend:
          service:
            name: my-k82265684
            port:
              number: 8080
        pathType: Prefix
